# lirik

./: Cargo.toml  Makefile  README.md  test
.github/workflows/: release.yml
src/: auth.rs  client.rs  config.rs  daemon.rs  lyrics.rs  main.rs  spotify.rs  tui.rs  watch.rs  web.html  web.rs
