[package]
name = "lirik"
version = "0.1.0"
edition = "2024"
description = "Spotify currently playing info and lyrics display"
license = "MIT"
repository = "https://github.com/zcag/lirik"
keywords = ["cli", "spotify", "lyrics", "music"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/lirik-{ target }.tar.gz"
bin-dir = "lirik-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/lirik-x86_64-unknown-linux-musl.tar.gz"
bin-dir = "lirik-x86_64-unknown-linux-musl/{ bin }"

[dependencies]
chrono = "0.4"
crossterm = "0.28"
dirs = "6"
image = "0.25"
libc = "0.2"
open = "5"
ratatui = "0.29"
ratatui-image = "4.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rspotify = { version = "0.13", features = ["cli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
